# busca-doggo

./: .env.template  .gitignore  LICENSE  README.md  log_config.json  metadata.json  mkdocs.yml  pyproject-actions.toml  pyproject-cpu.toml  pyproject.toml
.github/workflows/: test_suite.yml
busca_doggo/: __init__.py  cli.py
busca_doggo/classificador/: __init__.py  dataset.py
busca_doggo/utils/: __init__.py  log.py  metadata.py
docs/: index.md
docs/classificador/: dataset.md
docs/utils/: log.md
tests/utils/: test_logger.py  test_metadata.py
