[tool.poetry]
name = "busca-doggo"
version = "0.1.0"
description = ""
authors = ["Luís Otávio Amorim <luisotaviolamorim@gmail.com>"]
readme = "README.md"
packages = [{include = "busca_doggo"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp311-cp311-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp311-cp311-win_amd64.whl"}
tqdm = "^4.66.1"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
torchsummary = "^1.5.1"
python-dotenv = "^1.0.0"
kaggle = "^1.6.3"

[tool.poetry.scripts]
busca_doggo = "busca_doggo.cli:entry_point"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"
mkdocs-material = "^9.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=busca_doggo -vv"
post_test = "coverage html"
docs = "mkdocs serve"
